--- a/web/tabelle/file2.css
+++ b/web/tabelle/file2.css
@@ -1,11 +1,3 @@
-.top-image {
-    width: 100%;
-}
-
-.center-text {
-    text-align: center;
-    }
-
 .image-container {
     display: flex;
     gap: 20px;
@@ -16,9 +8,13 @@
     width: 30%;
 }
 
+.left-images img {
+    margin-bottom: 20px;
+}
+
 .right-images img {
     display: block;
     margin-bottom: 5px;
     width: 150px;
-    height: 195px;
+    height: 200px;
 }
